...
"search.type.album" = "Album";
"search.type.artist" = "Artist";
"search.type.playlist" = "Playlist";
"ジャンル" = "Genres";
"ライブラリ" = "Library";
"最近追加した項目" = "Recently Added";
"検索" = "Search";
"タイトル順" = "Title";
"アルバムがありません" = "No Albums";
"アーティストがありません" = "No Artists";
"プレイリストがありません" = "No Playlists";
"ジャンルがありません" = "No Genres";
"曲がありません" = "No Songs";
...
